# advent-of-code

./: Cargo.toml  README.md
2022/: Cargo.toml  README.md
2022/inputs/: 05.in
2022/src/: lib.rs
2023/: Cargo.toml  README.md
2023/src/: lib.rs
2024/: Cargo.toml  README.md
2024/inputs/: 15.in  17.in
2025/: Cargo.toml  README.md
2025/src/: lib.rs  main.rs  template.rs
src/: lib.rs  main.rs
