[package]
name = "aoc"
authors = ["Max Crone"]
version = "0.1.0"
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
hashbrown = "0.13.1"
itertools = "0.12"
anyhow = "1.0"
color-eyre = "0.6"
serde_json = "1.0"

# main.rs dependencies
once_cell = "1.16.0"
regex = "1.7.0"

# lib proc-macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
