[package]
name = "aoc"
authors = ["Max Crone"]
version = "0.1.0"
edition = "2021"
default-run = "aoc"

[lib]
proc-macro = true

[dependencies]
# main.rs dependencies
once_cell = "1.16.0"
regex = "1.7.0"

# lib proc-macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
itertools = "0.13.0"
