[package]
name = "aoc"
version = "0.1.0"
authors = ["Max Crone"]
edition = "2024"
default-run = "aoc"

[lib]
proc-macro = true

[dependencies]
cached = "0.56.0"
itertools = "0.14.0"
once_cell = "1.21.3"
priority-queue = "2.7.0"
quote = "1.0.42"
rayon = "1.11.0"
regex = "1.12.2"
syn = { version = "2.0.111", features = ["full"] }
